Change sybilmayard.com to sybiltec.com

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ permalink: /blog/
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script defer src="https://sybilmayard.com/fontawesome/js/all.min.js"></script>
+        <script defer src="https://sybiltec.com/fontawesome/js/all.min.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
@@ -24,9 +24,9 @@ permalink: /blog/
         <meta property="og:title" content="Blog | Web Development &amp; E-Commerce Services | Sybiltech" />
         <meta property="og:description" content="Sybiltech provides website development and e-commerce
         services for SMEs. Read my blog posts here." />
-        <meta property="og:url" content="https://sybilmayard.com/blog/" />
+        <meta property="og:url" content="https://sybiltec.com/blog/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
+        <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -35,9 +35,9 @@ permalink: /blog/
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.com/blog/" />
-        <link rel="stylesheet" href="https://sybilmayard.com/styles.min.css" type="text/css">
-        <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
+        <link rel="canonical" href="https://sybiltec.com/blog/" />
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
+        <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
             (function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
@@ -54,7 +54,7 @@ permalink: /blog/
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybiltec.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -62,13 +62,13 @@ permalink: /blog/
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="https://sybilmayard.com/services">Services</a>
-                    <a href="https://sybilmayard.com/clients">Clients</a>
-                    <a href="https://sybilmayard.com/design">Design</a>
-                    <a href="https://sybilmayard.com/about">About Me</a>
-                    <a href="https://sybilmayard.com/projects">Projects</a>   
-                    <a href="https://sybilmayard.com/faqs">FAQs</a>
-                    <a href="https://sybilmayard.com/blog">Blog</a>
+                    <a href="https://sybiltec.com/services">Services</a>
+                    <a href="https://sybiltec.com/clients">Clients</a>
+                    <a href="https://sybiltec.com/design">Design</a>
+                    <a href="https://sybiltec.com/about">About Me</a>
+                    <a href="https://sybiltec.com/projects">Projects</a>   
+                    <a href="https://sybiltec.com/faqs">FAQs</a>
+                    <a href="https://sybiltec.com/blog">Blog</a>
                     <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
@@ -86,7 +86,7 @@ permalink: /blog/
             <div class="container-1000">
                 <h2>Cyber Security Best Practices for You and Your Business</h2>
                 <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog. By following good cyber security practises, you can enjoy a safe and secure experience both online and offline. Click on any image a to view a larger version. …</p>
-                <a href="https://sybilmayard.com/cyber-security-best-practices-for-business">Read More >></a>
+                <a href="https://sybiltec.com/cyber-security-best-practices-for-business">Read More >></a>
                 <h2>6 Reasons Why You Should be Using Shopify</h2>
                 <p>Are you planning to sell your products or services online? Consider choosing 
                     <a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
@@ -94,26 +94,26 @@ permalink: /blog/
                     a few of the benefits you can enjoy. Customisable Themes Coding and design 
                     skills are not necessary to make your store look unique and fabulous! Shopify 
                     offers a selection of …</p>
-                <a href="https://sybilmayard.com/6-reasons-to-use-shopify">Read More >></a>
+                <a href="https://sybiltec.com/6-reasons-to-use-shopify">Read More >></a>
                 <h2>WebTip Wednesday Series Launched on Twitter</h2>
                 <p>"WebTip Wednesday" is a new series of tweets for website development. Be 
                     sure not to miss a tweet by following Sybiltech on Twitter: 
                     <a href="https://twittwe.com/sybiltech1" target="_blank" rel="noopener 
                     noreferrer">twitter.com/Sybiltech1</a>.</p>
-                <a href="https://sybilmayard.com/webtip-wednesday-series-launched-on-twitter">Read More >></a>
+                <a href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">Read More >></a>
                 <h2>5 Best Tools for Remote Working</h2>
                 <p>With an overwhelming amount of tools available today, it can be a difficult 
                     task finding the best ones, especially if you are unfamiliar with working 
                     from home. Here I present to you a summary of my 5 favourite tools for remote 
                     working, all of which are available for free. Of course, I can't go into …</p>
-                <a href="https://sybilmayard.com/5-best-tools-for-remote-working">Read More >></a>
+                <a href="https://sybiltec.com/5-best-tools-for-remote-working">Read More >></a>
                 <h2>6 Tips for Surviving Remote Working</h2>
                 <p>Love it or loathe it, working remotely may not be for everyone but due to 
                     the current pandemic it's essential that work is carried out from home 
                     where possible. Read on to find out how you can WFH (work from home) more 
                     effectively. Optimise Your Technology Get a reliable internet connection. 
                     If possible, use an …</p>
-                <a href="https://sybilmayard.com/6-tips-for-surviving-remote-working">Read More >></a>
+                <a href="https://sybiltec.com/6-tips-for-surviving-remote-working">Read More >></a>
             </div>
         </div>
         <div class="contact section">
@@ -128,11 +128,11 @@ permalink: /blog/
                     <div class="col-2">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybilmayard.com/about">About</a></p>
-                        <p><a href="https://sybilmayard.com/services">Services</a></p>
+                        <p><a href="https://sybiltec.com/about">About</a></p>
+                        <p><a href="https://sybiltec.com/services">Services</a></p>
                         <p><a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a></p>
-                        <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
                     <div class="col-2">
                         <h4>Services</h4>
@@ -159,13 +159,13 @@ permalink: /blog/
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
+                            <img src="https://sybiltec.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
                         <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
 <img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" alt="IONOS - Official Partner">
 </a></p>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
