--- a/design.html
+++ b/design.html
@@ -4,7 +4,7 @@ permalink: /design/
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script defer src="https://sybilmayard.com/fontawesome/js/all.min.js"></script>
+        <script defer src="https://sybiltec.com/fontawesome/js/all.min.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
@@ -22,9 +22,9 @@ permalink: /design/
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Design | Web Development & E-Commerce Services | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard can design a poster, leaflet or flyer for your event. View the gallery of my past projects here." />
-        <meta property="og:url" content="https://sybilmayard.com/design/" />
+        <meta property="og:url" content="https://sybiltec.com/design/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
+        <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -33,9 +33,9 @@ permalink: /design/
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.com/design/" />
-        <link rel="stylesheet" href="https://sybilmayard.com/styles.min.css" type="text/css">
-        <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
+        <link rel="canonical" href="https://sybiltec.com/design/" />
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
+        <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
             (function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
@@ -52,7 +52,7 @@ permalink: /design/
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybiltec.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -60,13 +60,13 @@ permalink: /design/
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="https://sybilmayard.com/services">Services</a>
-                    <a href="https://sybilmayard.com/clients">Clients</a>
-                    <a href="https://sybilmayard.com/design">Design</a>
-                    <a href="https://sybilmayard.com/about">About Me</a>
-                    <a href="https://sybilmayard.com/projects">Projects</a>   
-                    <a href="https://sybilmayard.com/faqs">FAQs</a>
-                    <a href="https://sybilmayard.com/blog">Blog</a>
+                    <a href="https://sybiltec.com/services">Services</a>
+                    <a href="https://sybiltec.com/clients">Clients</a>
+                    <a href="https://sybiltec.com/design">Design</a>
+                    <a href="https://sybiltec.com/about">About Me</a>
+                    <a href="https://sybiltec.com/projects">Projects</a>   
+                    <a href="https://sybiltec.com/faqs">FAQs</a>
+                    <a href="https://sybiltec.com/blog">Blog</a>
                     <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
@@ -85,21 +85,21 @@ permalink: /design/
                 <hr class="left-align">
                 <p>A selection of posters, flyers and leaflet designs.</p>
                 <div class="design">
-                    <img id="0" class="myImg" src="https://sybilmayard.com/images/design/CNT-Associates-Getting-Your-Business-Online.jpg" alt="CNT Associates - Getting Your Business Online" onClick="openModal(0)">
-                    <img id="1" class="myImg" src="https://sybilmayard.com/images/design/CNT-Associates-Setting-Up-an-Online-Store-For-Your-Business-Using-Shopify.jpg" alt="CNT Associates - Setting Up an Online Store For Your Business Using Shopify" onClick="openModal(1)">
-                    <img id="2" class="myImg" src="https://sybilmayard.com/images/design/Future-Communities-Loneliness-Project.jpg" alt="Future Communities - Loneliness Project" onClick="openModal(2)">
-                    <img id="3" class="myImg" src="https://sybilmayard.com/images/design/Happily-Clappily-Ever-Laughter-Lakeview-Court.jpg" alt="Happily Clappily Ever Laughter @ Lakeview Court" onClick="openModal(3)">
-                    <img id="4" class="myImg" src="https://sybilmayard.com/images/design/Happily-Clappily-Ever-Laughter-Loneliness-Project.jpg" alt="Happily Clappily Ever Laughter - Loneliness Project" onClick="openModal(4)">
-                    <img id="5" class="myImg" src="https://sybilmayard.com/images/design/Happily-Clappily-Ever-Laughter-Wellness-Sessions.jpg" alt="Happily Clappily Ever Laughter - Wellness Sessions" onClick="openModal(5)">
-                    <img id="6" class="myImg" src="https://sybilmayard.com/images/design/Pre-loved-Sale-and-Fundraiser.jpg" alt="Pre-loved Sale and Fundraiser" onClick="openModal(6)">
-                    <img id="7" class="myImg" src="https://sybilmayard.com/images/design/reel_women_introductory_video-making_course.jpg" alt="Reel Women Introductory Video-Making Course" onClick="openModal(7)">
-                    <img id="8" class="myImg" src="https://sybilmayard.com/images/design/shadowlight_group_exhibition.jpg" alt="The Shadowlight Group Exhibition" onClick="openModal(8)">
-                    <img id="9" class="myImg" src="https://sybilmayard.com/images/design/shadowlight_group_flash_frame_artist_presentation.jpg" alt="Shadowlight Group Flash Frame Artist Presentation" onClick="openModal(9)">
-                    <img id="10" class="myImg" src="https://sybilmayard.com/images/design/shadowlight_group_postcard_front.jpg" alt="Shadowlight Group Postcard (Front)" onClick="openModal(10)">
-                    <img id="11" class="myImg" src="https://sybilmayard.com/images/design/shadowlight_group_postcard_back.jpg" alt="Shadowlight Group Postcard (Back)" onClick="openModal(11)">
-                    <img id="12" class="myImg" src="https://sybilmayard.com/images/design/shadowlight_group_poster.jpg" alt="Shadowlight Group Poster" onClick="openModal(12)">
-                    <img id="13" class="myImg" src="https://sybilmayard.com/images/design/TK-Maxx-Valentines-Day-2014-v1.jpg" alt="TK Maxx Valentine's Day 2014 v1" onClick="openModal(13)">
-                    <img id="14" class="myImg" src="https://sybilmayard.com/images/design/TK-Maxx-Valentines-Day-2014-v2.jpg" alt="TK Maxx Valentine's Day 2014 v2" onClick="openModal(14)">
+                    <img id="0" class="myImg" src="https://sybiltec.com/images/design/CNT-Associates-Getting-Your-Business-Online.jpg" alt="CNT Associates - Getting Your Business Online" onClick="openModal(0)">
+                    <img id="1" class="myImg" src="https://sybiltec.com/images/design/CNT-Associates-Setting-Up-an-Online-Store-For-Your-Business-Using-Shopify.jpg" alt="CNT Associates - Setting Up an Online Store For Your Business Using Shopify" onClick="openModal(1)">
+                    <img id="2" class="myImg" src="https://sybiltec.com/images/design/Future-Communities-Loneliness-Project.jpg" alt="Future Communities - Loneliness Project" onClick="openModal(2)">
+                    <img id="3" class="myImg" src="https://sybiltec.com/images/design/Happily-Clappily-Ever-Laughter-Lakeview-Court.jpg" alt="Happily Clappily Ever Laughter @ Lakeview Court" onClick="openModal(3)">
+                    <img id="4" class="myImg" src="https://sybiltec.com/images/design/Happily-Clappily-Ever-Laughter-Loneliness-Project.jpg" alt="Happily Clappily Ever Laughter - Loneliness Project" onClick="openModal(4)">
+                    <img id="5" class="myImg" src="https://sybiltec.com/images/design/Happily-Clappily-Ever-Laughter-Wellness-Sessions.jpg" alt="Happily Clappily Ever Laughter - Wellness Sessions" onClick="openModal(5)">
+                    <img id="6" class="myImg" src="https://sybiltec.com/images/design/Pre-loved-Sale-and-Fundraiser.jpg" alt="Pre-loved Sale and Fundraiser" onClick="openModal(6)">
+                    <img id="7" class="myImg" src="https://sybiltec.com/images/design/reel_women_introductory_video-making_course.jpg" alt="Reel Women Introductory Video-Making Course" onClick="openModal(7)">
+                    <img id="8" class="myImg" src="https://sybiltec.com/images/design/shadowlight_group_exhibition.jpg" alt="The Shadowlight Group Exhibition" onClick="openModal(8)">
+                    <img id="9" class="myImg" src="https://sybiltec.com/images/design/shadowlight_group_flash_frame_artist_presentation.jpg" alt="Shadowlight Group Flash Frame Artist Presentation" onClick="openModal(9)">
+                    <img id="10" class="myImg" src="https://sybiltec.com/images/design/shadowlight_group_postcard_front.jpg" alt="Shadowlight Group Postcard (Front)" onClick="openModal(10)">
+                    <img id="11" class="myImg" src="https://sybiltec.com/images/design/shadowlight_group_postcard_back.jpg" alt="Shadowlight Group Postcard (Back)" onClick="openModal(11)">
+                    <img id="12" class="myImg" src="https://sybiltec.com/images/design/shadowlight_group_poster.jpg" alt="Shadowlight Group Poster" onClick="openModal(12)">
+                    <img id="13" class="myImg" src="https://sybiltec.com/images/design/TK-Maxx-Valentines-Day-2014-v1.jpg" alt="TK Maxx Valentine's Day 2014 v1" onClick="openModal(13)">
+                    <img id="14" class="myImg" src="https://sybiltec.com/images/design/TK-Maxx-Valentines-Day-2014-v2.jpg" alt="TK Maxx Valentine's Day 2014 v2" onClick="openModal(14)">
                 </div>
                 <!-- The Modal -->
                 <div id="myModal" class="modal">
@@ -123,11 +123,11 @@ permalink: /design/
                     <div class="col-2">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybilmayard.com/about">About</a></p>
-                        <p><a href="https://sybilmayard.com/services">Services</a></p>
+                        <p><a href="https://sybiltec.com/about">About</a></p>
+                        <p><a href="https://sybiltec.com/services">Services</a></p>
                         <p><a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a></p>
-                        <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
                     <div class="col-2">
                         <h4>Services</h4>
@@ -154,13 +154,13 @@ permalink: /design/
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
+                            <img src="https://sybiltec.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
                         <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
 <img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" alt="IONOS - Official Partner">
 </a></p>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
@@ -196,7 +196,7 @@ permalink: /design/
             function showGalleryImage() {
                 var img = document.getElementById(i);
                 var modalImg = document.getElementById("modalImg");
-                var src = "https://sybilmayard.com/images/design/" + i + ".jpg";
+                var src = "https://sybiltec.com/images/design/" + i + ".jpg";
                 modal.style.display = "block";
                 modalImg.src = src;
                 captionText.innerHTML = img.alt;
