--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ permalink: /
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script defer src="https://sybilmayard.com/fontawesome/js/all.min.js"></script>
+        <script defer src="https://sybiltec.com/fontawesome/js/all.min.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
@@ -24,9 +24,9 @@ permalink: /
         <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
             for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
-        <meta property="og:url" content="https://sybilmayard.com/" />
+        <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
+        <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -35,9 +35,9 @@ permalink: /
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.com/" />
-        <link rel="stylesheet" href="https://sybilmayard.com/styles.min.css" type="text/css">
-        <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
+        <link rel="canonical" href="https://sybiltec.com/" />
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
+        <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
             (function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
@@ -54,7 +54,7 @@ permalink: /
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybiltec.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -62,13 +62,13 @@ permalink: /
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>    
-                    <a href="https://sybilmayard.com/services">Services</a>
-                    <a href="https://sybilmayard.com/clients">Clients</a>
-                    <a href="https://sybilmayard.com/design">Design</a>
-                    <a href="https://sybilmayard.com/about">About Me</a>
-                    <a href="https://sybilmayard.com/projects">Projects</a>   
-                    <a href="https://sybilmayard.com/faqs">FAQs</a>
-                    <a href="https://sybilmayard.com/blog">Blog</a>
+                    <a href="https://sybiltec.com/services">Services</a>
+                    <a href="https://sybiltec.com/clients">Clients</a>
+                    <a href="https://sybiltec.com/design">Design</a>
+                    <a href="https://sybiltec.com/about">About Me</a>
+                    <a href="https://sybiltec.com/projects">Projects</a>   
+                    <a href="https://sybiltec.com/faqs">FAQs</a>
+                    <a href="https://sybiltec.com/blog">Blog</a>
                     <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fas fa-bars"></i>
@@ -81,7 +81,7 @@ permalink: /
                 <h4>Taking your online business further...</h4>
                 <h1>Sybiltech</h1>
                 <p class="padding-bottom">A freelance IT consultant who can help you achieve your goals.</p>
-                <a class="btn-primary" href="https://sybilmayard.com/services">View My Services</a>
+                <a class="btn-primary" href="https://sybiltec.com/services">View My Services</a>
             </div>
         </div>
         <div class="services section">
@@ -112,7 +112,7 @@ permalink: /
                     </div>
                 </div>
                 <div class="center padding-bottom">
-                    <a class="btn-primary" href="https://sybilmayard.com/services">View Services</a>   
+                    <a class="btn-primary" href="https://sybiltec.com/services">View Services</a>   
                 </div>
             </div>
         </div>
@@ -123,30 +123,30 @@ permalink: /
                 worked with:</p>
             <div class="row">
                 <div class="col-3">                    
-                    <a href="https://sybilmayard.com/clients#crazy-thumbs"><img src="https://sybilmayard.com/images/clients/crazy-thumbs.jpg" 
+                    <a href="https://sybiltec.com/clients#crazy-thumbs"><img src="https://sybiltec.com/images/clients/crazy-thumbs.jpg" 
                         alt="Crazy Thumbs"></a>
                     <h4>Crazy Thumbs</h4>
                     </div>
                 <div class="col-3">                       
-                    <a href="https://sybilmayard.com/clients#nerowireart"><img src="https://sybilmayard.com/images/clients/nerowireart.jpg" 
+                    <a href="https://sybiltec.com/clients#nerowireart"><img src="https://sybiltec.com/images/clients/nerowireart.jpg" 
                         alt="Nerowireart"></a>
                     <h4>Nerowireart</h4>
                 </div>
                 <div class="col-3">                    
-                    <a href="https://sybilmayard.com/clients#bamboo-wardrobe">
-                        <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" 
+                    <a href="https://sybiltec.com/clients#bamboo-wardrobe">
+                        <img src="https://sybiltec.com/images/clients/the-bamboo-wardrobe.jpg" 
                         alt="The Bamboo Wardrobe"></a>
                 <h4>The Bamboo Wardrobe</h4>
                 </div>
                 <div class="col-3">                        
-                    <a href="https://sybilmayard.com/clients#together-matters">
-                        <img src="https://sybilmayard.com/images/clients/Together-Matters.jpg" 
+                    <a href="https://sybiltec.com/clients#together-matters">
+                        <img src="https://sybiltec.com/images/clients/Together-Matters.jpg" 
                         alt="Together Matters"></a>
                     <h4>Together Matters</h4>
                 </div>
             </div>
             <div class="center padding-bottom">
-                <a class="btn-primary" href="https://sybilmayard.com/clients">View All Clients</a>   
+                <a class="btn-primary" href="https://sybiltec.com/clients">View All Clients</a>   
             </div>
         </div>
         <div class="testimonials section grey">
@@ -158,7 +158,7 @@ permalink: /
                         <div class="shadow-box center">                            
                             <p>Sybil has been a lifesaver! I had an image in my head what I wanted our new webpage to look like (but no skill or idea how to get there!) and for Sybil no question was silly, no suggestion was left out without serious consideration and the final product is sleek, clean and professionally looking. Sybil listened, did not impose a 'manufactured easy to do template' webpage on us. Her approach is truly personable, she managed our expectations beautifully and delivered a service which is best characterized by 'above and beyond'. As University of Kent Alumna, Sybil simply delivered, she certainly commits her knowledge, skill and innovative entrepreneurial mind to 100% benefit for her customer.</p>
                             <div class="center">
-                                <img src="https://sybilmayard.com/images/logos/nerowireart.png" alt="Nerowireart">
+                                <img src="https://sybiltec.com/images/logos/nerowireart.png" alt="Nerowireart">
                             </div>
                             <h4>Dr Zita Stone</h4>
                             <p class="center">Nerowireart</p>
@@ -168,7 +168,7 @@ permalink: /
                         <div class="shadow-box center">                            
                             <p>The first time I spoke to Sybil about designing my website, she really listened and took everything I wanted into the first draft of the layout. It was unbelievably accurate and she incorporated (and enhanced) even the smallest details that I had mentioned. She is totally client focused. She morphs design and technical knowledge beautifully. She produces such high quality websites whilst being able to commit to deadlines. Sybil works so hard to bring clients bespoke websites! I am so happy with the support I received from Sybil and over the moon with the way my website looks! I have been recommending Sybil to everyone and won't stop! She's amazing!</p>
                             <div class="center">
-                                <img src="https://sybilmayard.com/images/logos/happily-clappily-ever-laughter-logo.png" alt="Happily Clappily Ever Laughter logo">
+                                <img src="https://sybiltec.com/images/logos/happily-clappily-ever-laughter-logo.png" alt="Happily Clappily Ever Laughter logo">
                             </div>
                             <h4>Patricia Byrne</h4>
                             <p class="center">CEO,<br>Happily Clappily Ever Laughter</p>
@@ -186,7 +186,7 @@ permalink: /
                                 hard worker.<br>I would recommend her to anyone looking for a partner 
                                 to nail your website!</p>
                             <div class="center">
-                                <img src="https://sybilmayard.com/images/logos/KYOSK-Logo.png" alt="KYOSK logo">
+                                <img src="https://sybiltec.com/images/logos/KYOSK-Logo.png" alt="KYOSK logo">
                             </div>
                             <h4>Shaheen Javid</h4>
                             <p class="center">CEO,<br>
@@ -204,7 +204,7 @@ permalink: /
                                 explanations. I would highly recommend Sybil's 
                                 services to anyone!</p>
                             <div class="center">
-                                <img src="https://sybilmayard.com/images/logos/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
+                                <img src="https://sybiltec.com/images/logos/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
                             </div>
                             <h4>Freddie Ryder</h4>
                             <p class="center">CEO,<br>
@@ -223,7 +223,7 @@ permalink: /
                                 Her work is of a high quality and she is able to work both as part 
                                 of a team and on her own initiative.</p>
                             <div class="center">
-                                <img src="https://sybilmayard.com/images/logos/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
+                                <img src="https://sybiltec.com/images/logos/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
                             </div>
                             <h4>Gary Parker</h4>
                             <p class="center">Director,<br>
@@ -239,7 +239,7 @@ permalink: /
                                 Sybil to anyone wanting a high quality, personalised and reasonably 
                                 priced service. Her work is top class!</p>
                             <div class="center">
-                                <img src="https://sybilmayard.com/images/logos/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
+                                <img src="https://sybiltec.com/images/logos/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
                             </div>
                             <h4>Audrey Zeitoun</h4>
                             <p class="center">Life Transitions Coach,<br>
@@ -257,9 +257,9 @@ permalink: /
                 <div class="row">
                     <div class="col-4">
                         <h4>Google Digital Garage Certified</h4>
-                        <a href="https://sybilmayard.com/uploads/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing.pdf"
+                        <a href="https://sybiltec.com/uploads/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing.pdf"
                             target="_blank">
-                            <img src="https://sybilmayard.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
+                            <img src="https://sybiltec.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
                                 alt="Sybil Mayard Google Digital Garage The Fundamentals of Digital Marketing certificate">
                         </a>
                     </div>
@@ -267,13 +267,13 @@ permalink: /
                     <h4>Yoast Academy Certified</h4>
                     <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
                         target="_blank" rel="noopener noreferrer">
-                        <img src="https://sybilmayard.com/images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
+                        <img src="https://sybiltec.com/images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
                             alt="Sybil Mayard Yoast for Beginners certificate"></a>
                     </div>
                     <div class="col-4">
                         <h4>The Complete 2022 Software Testing Bootcamp</h4>
-                        <a href="https://sybilmayard.com/uploads/udemy-the-complete-2022-software-testing-bootcamp.pdf" target="_blank">
-                            <img src="https://sybilmayard.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpeg"
+                        <a href="https://sybiltec.com/uploads/udemy-the-complete-2022-software-testing-bootcamp.pdf" target="_blank">
+                            <img src="https://sybiltec.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpeg"
                                 alt="Sybil Mayard Udemy The Complete 2022 Software Testing Bootcamp">
                         </a>
                     </div>
@@ -292,11 +292,11 @@ permalink: /
                     <div class="col-2">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybilmayard.com/about">About</a></p>
-                        <p><a href="https://sybilmayard.com/services">Services</a></p>
+                        <p><a href="https://sybiltec.com/about">About</a></p>
+                        <p><a href="https://sybiltec.com/services">Services</a></p>
                         <p><a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a></p>
-                        <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
                     <div class="col-2">
                         <h4>Services</h4>
@@ -323,13 +323,13 @@ permalink: /
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
+                            <img src="https://sybiltec.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
                         <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
 <img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" alt="IONOS - Official Partner">
 </a></p>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
