--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ permalink: /projects/
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script defer src="https://sybilmayard.com/fontawesome/js/all.min.js"></script>
+        <script defer src="https://sybiltec.com/fontawesome/js/all.min.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
@@ -22,9 +22,9 @@ permalink: /projects/
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Projects | Website Development & E-Commerce | Sybiltech" />
         <meta property="og:description" content="A selection of Sybil Mayard's personal projects." />
-        <meta property="og:url" content="https://sybilmayard.com/projects/" />
+        <meta property="og:url" content="https://sybiltec.com/projects/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
+        <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -33,9 +33,9 @@ permalink: /projects/
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.com/projects/" />
-        <link rel="stylesheet" href="https://sybilmayard.com/styles.min.css" type="text/css">
-        <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
+        <link rel="canonical" href="https://sybiltec.com/projects/" />
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
+        <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
             (function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
@@ -52,7 +52,7 @@ permalink: /projects/
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybiltec.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -60,13 +60,13 @@ permalink: /projects/
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="https://sybilmayard.com/services">Services</a>
-                    <a href="https://sybilmayard.com/clients">Clients</a>
-                    <a href="https://sybilmayard.com/design">Design</a>
-                    <a href="https://sybilmayard.com/about">About Me</a>
-                    <a href="https://sybilmayard.com/projects">Projects</a>   
-                    <a href="https://sybilmayard.com/faqs">FAQs</a>
-                    <a href="https://sybilmayard.com/blog">Blog</a>
+                    <a href="https://sybiltec.com/services">Services</a>
+                    <a href="https://sybiltec.com/clients">Clients</a>
+                    <a href="https://sybiltec.com/design">Design</a>
+                    <a href="https://sybiltec.com/about">About Me</a>
+                    <a href="https://sybiltec.com/projects">Projects</a>   
+                    <a href="https://sybiltec.com/faqs">FAQs</a>
+                    <a href="https://sybiltec.com/blog">Blog</a>
                     <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
@@ -104,8 +104,8 @@ permalink: /projects/
                 <ul>
                     <li><a href="https://www.kent.ac.uk/news/society/17829/big-ideas-competition-winner-goes-to-global-competition" target="_blank" rel="noopener noreferrer">Big Ideas Competition Winner goes to Global Competition</a></li>
                     <li><a href="https://video.vt.edu/media/Global+Entrepreneur+Challenge+2018/1_16k9vaj1" target="_blank" rel="noopener noreferrer">Global Entrepreneur Challenge 2018 - Virginia Tech - Video</a></li>
-                    <li><a href="https://sybilmayard.com/uploads/Global_Entrepreneur_Challenge_2018.pdf" target="_blank" rel="noopener noreferrer">Global Entrepreneur Challenge 2018</a></li>
-                    <li><a href="https://sybilmayard.com/uploads/BT_127973_GradPost%20Winter%202018_FINAL_web.pdf" target="_blank" rel="noopener noreferrer">The GradPost, Winter 2018 Edition</a></li>
+                    <li><a href="https://sybiltec.com/uploads/Global_Entrepreneur_Challenge_2018.pdf" target="_blank" rel="noopener noreferrer">Global Entrepreneur Challenge 2018</a></li>
+                    <li><a href="https://sybiltec.com/uploads/BT_127973_GradPost%20Winter%202018_FINAL_web.pdf" target="_blank" rel="noopener noreferrer">The GradPost, Winter 2018 Edition</a></li>
                 </ul>
 
                 <h3>Market Research</h3>
@@ -113,7 +113,7 @@ permalink: /projects/
 
                 <p>Please download the guide below if you would like more information about the market research.</p>
                 <div class="padding-top">
-                    <a class="btn-secondary" href="https://sybilmayard.com/uploads/VidCareer-Information-v2.pdf" target="_blank">Download Market Research Info</a>
+                    <a class="btn-secondary" href="https://sybiltec.com/uploads/VidCareer-Information-v2.pdf" target="_blank">Download Market Research Info</a>
                 </div>
 
                 <h2 class="padding-top">An Android App for an Educational Poker Platform</h2>
@@ -161,7 +161,7 @@ permalink: /projects/
                     </ul>
                 
                     <div class="center">
-                        <img src="https://sybilmayard.com/images/tagnav-business-start-up-journey-2018.jpg"
+                        <img src="https://sybiltec.com/images/tagnav-business-start-up-journey-2018.jpg"
                         alt="Students reach final of start-up competition at the University of Kent">
                         <p>Students reach final of start-up competition at the University of Kent</p>
                     </div> 
@@ -185,11 +185,11 @@ permalink: /projects/
                     <div class="col-2">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybilmayard.com/about">About</a></p>
-                        <p><a href="https://sybilmayard.com/services">Services</a></p>
+                        <p><a href="https://sybiltec.com/about">About</a></p>
+                        <p><a href="https://sybiltec.com/services">Services</a></p>
                         <p><a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a></p>
-                        <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
                     <div class="col-2">
                         <h4>Services</h4>
@@ -216,13 +216,13 @@ permalink: /projects/
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
+                            <img src="https://sybiltec.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
                         <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
 <img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" alt="IONOS - Official Partner">
 </a></p>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
