--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -4,7 +4,7 @@ permalink: /terms-and-conditions/
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script defer src="https://sybilmayard.com/fontawesome/js/all.min.js"></script>
+        <script defer src="https://sybiltec.com/fontawesome/js/all.min.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
@@ -24,9 +24,9 @@ permalink: /terms-and-conditions/
         <meta property="og:title" content="Terms & Conditions | Web Development E-Commerce | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
             for SMEs in Shopify, Squarespace, WordPress and Wix. Read my terms and conditions here." />
-        <meta property="og:url" content="https://sybilmayard.com/terms-and-conditions/" />
+        <meta property="og:url" content="https://sybiltec.com/terms-and-conditions/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
+        <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -35,9 +35,9 @@ permalink: /terms-and-conditions/
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.com/terms-and-conditions/" />
-        <link rel="stylesheet" href="https://sybilmayard.com/styles.min.css" type="text/css">
-        <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
+        <link rel="canonical" href="https://sybiltec.com/terms-and-conditions/" />
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
+        <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
             (function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
@@ -54,7 +54,7 @@ permalink: /terms-and-conditions/
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybiltec.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -62,13 +62,13 @@ permalink: /terms-and-conditions/
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="https://sybilmayard.com/services">Services</a>
-                    <a href="https://sybilmayard.com/clients">Clients</a>
-                    <a href="https://sybilmayard.com/design">Design</a>
-                    <a href="https://sybilmayard.com/about">About Me</a>
-                    <a href="https://sybilmayard.com/projects">Projects</a>   
-                    <a href="https://sybilmayard.com/faqs">FAQs</a>
-                    <a href="https://sybilmayard.com/blog">Blog</a>
+                    <a href="https://sybiltec.com/services">Services</a>
+                    <a href="https://sybiltec.com/clients">Clients</a>
+                    <a href="https://sybiltec.com/design">Design</a>
+                    <a href="https://sybiltec.com/about">About Me</a>
+                    <a href="https://sybiltec.com/projects">Projects</a>   
+                    <a href="https://sybiltec.com/faqs">FAQs</a>
+                    <a href="https://sybiltec.com/blog">Blog</a>
                     <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
@@ -152,7 +152,7 @@ permalink: /terms-and-conditions/
 
                 <h3>5. Miscellaneous matters</h3>
                 <p>
-                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is at <a href="https://sybilmayard.com/uploads/privacy-policy-v3.pdf" target="_blank">https://sybilmayard.com/uploads/privacy-policy-v3.pdf" target="_blank</a>.<br>
+                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is at <a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank</a>.<br>
                     5.2. If any term or provision of this agreement is at any time held by any jurisdiction to be void, invalid or unenforceable, then it shall be treated as changed or reduced, only to the extent minimally necessary to bring it within the laws of that jurisdiction and to prevent it from being void and it shall be binding in that changed or reduced form. Subject to that, each provision shall be interpreted as severable and shall not in any way affect any other of these terms.<br>
                     5.3. No failure or delay by any party to exercise any right, power or remedy will operate as a waiver of it nor indicate any intention to reduce that or any other right in the future.<br>
                     5.4. Any communication to be served on either party by the other shall be delivered by hand or sent by first class post or by e-mail.<br>
@@ -176,11 +176,11 @@ permalink: /terms-and-conditions/
                     <div class="col-2">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybilmayard.com/about">About</a></p>
-                        <p><a href="https://sybilmayard.com/services">Services</a></p>
+                        <p><a href="https://sybiltec.com/about">About</a></p>
+                        <p><a href="https://sybiltec.com/services">Services</a></p>
                         <p><a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a></p>
-                        <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
                     <div class="col-2">
                         <h4>Services</h4>
@@ -207,13 +207,13 @@ permalink: /terms-and-conditions/
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
+                            <img src="https://sybiltec.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
                         <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
 <img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" alt="IONOS - Official Partner">
 </a></p>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
